--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </nav>
 <!-- Header -->
-<header id="header">
+<!-- <header id="header">
   <div class="intro">
     <div class="overlay">
       <div class="container">
@@ -59,13 +59,13 @@
           <div class="intro-text">
             <h1>Jalpa</h1>
             <h1>BeautyCare</h1>
-            <!-- <p>Reservations: (887) 654-3210</p> -->
+            
           </div>
         </div>
       </div>
     </div>
   </div>
-</header>
+</header> -->
 <!-- Features Section -->
 <div id="features" class="text-center">
   <div class="container">
