--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </nav>
 <!-- Header -->
-<!-- <header id="header">
+<header id="header">
   <div class="intro">
     <div class="overlay">
       <div class="container">
@@ -65,7 +65,7 @@
       </div>
     </div>
   </div>
-</header> -->
+</header>
 <!-- Features Section -->
 <div id="features" class="text-center">
   <div class="container">
