--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
     <div class="col-md-6">
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100095393496590&mibextid=2JQ9oc"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://instagram.com/jalpabeautycare?igshid=MzRlODBiNWFlZA=="><i class="fa fa-instagram"></i></a></li>
+<!--           <li><a href="#"><i class="fa fa-youtube"></i></a></li> -->
         </ul>
       </div>
     </div>
