--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <h3>Reservations</h3>
       <div class="contact-item">
         <p>Please call</p>
-        <p>(887) 654-3210</p>
+        <a href="tel:886-609-8192">8866098192</a>
       </div>
     </div>
     <div class="col-md-4">
